<resources>
    <string name="app_name">doNotes</string>
    <string name="note_content">note_content</string>
    <string name="note_title">Note</string>
    <string name="note_create_date">01.01.2021</string>
    <string name="created">created:</string>
    <string name="about">Some information about app</string>
    <string name="go_to_github">Go to GitHub</string>
    <string name="some_settings">some settings</string>
    <string name="settings">Settings</string>
    <string name="menu_title_about_app">About app</string>
    <string name="search">search</string>
    <string name="close">close</string>
    <string name="share">share</string>
    <string name="sync_notes_list">sync notes list</string>
    <string name="pystaya_zaglushka">pystaya zaglushka</string>
    <string name="attach_image">attach image</string>
    <string name="exit">exit</string>
    <string name="dialog_title">doNotes</string>
    <string name="dialog_exit_message">exit doNotes?</string>
    <string name="ok">ok</string>
    <string name="no">no</string>
    <string name="cancel">CANCEL</string>
    <string name="some_options_to_attach_file">Some options to attach file</string>
    <string name="snack_sync_notes">Sync notes</string>
    <string name="button_cancel_message">\"Cancel\" pressed</string>
    <string name="note_deleted_message">Note deleted</string>
    <string name="attach_message">Attach file</string>
    <string name="share_note_massage">Share this note</string>
    <string name="bottomsheet_attach_message">Some options to attach file</string>
    <string name="alert_dialog_delete_message">Delete this note?</string>
    <string name="fab_edit_message">Edit note content</string>
    <string name="exit_message">EXIT APP</string>
    <string name="fab_new_note_message">Add new note</string>
    <string name="search_notes_message">Search notes</string>
    <string name="alert_dialog_exit_message">Exit app?</string>
    <string name="list_view">list_view</string>
    <string name="notes_are_absent_today">Notes are absent today</string>
    <string name="action_update">update</string>
    <string name="action_delete">delete</string>
    <string name="text_plain_type">text/plain</string>
    <string name="new_note_title">New note title</string>
    <string name="new_note_content">New note content</string>
    <string name="change_grid_notes_list">change grid</string>
    <string name="delete_error_message">Impossible to delete unsaved note</string>
    <string name="path_name">/data/user/0/com.ineedyourcode.donotes/files/</string>
    <string name="rb_firestore">Firestore</string>
    <string name="tv_firestore_notes_description">Заметки хранятся в облачной NoSQL базе данных Cloud Firestore</string>
    <string name="tv_internal_notes_description">Заметки хранятся во внутренней памяти устройства в файлах *.txt</string>
    <string name="tv_random_notes_description">Временно создаваемые заметки. Все произведенные с ними действия не сохраняются при выходе из приложения</string>
    <string name="rb_internal_notes">Внутренняя память устройства</string>
    <string name="rb_random_notes">Временные заметки</string>
    <string name="settings_save_button">Сохранить</string>
    <string name="tv_radio_title">Тип репозитория заметок:</string>
    <string name="message_new_note_added">New note added</string>
    <string name="message_note_updated">Note updated</string>
    <string name="notification_name">doNotes</string>
    <string name="notification_new_note">Новая заметка </string>
    <string name="notification_note_edited">Изменена заметка </string>
    <string name="notification_note_deleted">Удалена заметка </string>
    <string name="failed">\"FAILED: \"</string>
    <string name="channel_description">Изменение заметок в Firestore</string>
    <string name="channel_name">Firestore repository</string>
</resources>