<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_attach_image"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_attach_file_24"
        android:title="@string/attach_image"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_share_note"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_delete_note"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/close"
        app:showAsAction="ifRoom" />



</menu>