<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_change_layout"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_grid_view_24"
        android:title="@string/change_grid_notes_list"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_search"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_exit_app"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/exit"
        app:showAsAction="ifRoom" />

</menu>