<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    tools:context=".ui.navdrawer.SettingsFragment">

    <com.google.android.material.textfield.TextInputEditText
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:editable="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/dim_100dp">

        <TextView
            android:id="@+id/radio_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_radio_title"
            android:textColor="@color/note_title"
            android:textSize="@dimen/radio_title_size" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dim_16dp">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_random_notes"
                style="@style/RadioButton"
                android:text="@string/rb_random_notes" />

            <TextView
                android:id="@+id/radio_random_notes_description"
                style="@style/RadioButtonDescription"
                android:text="@string/tv_random_notes_description"
                tools:visibility="visible" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_internal_notes"
                style="@style/RadioButton"
                android:text="@string/rb_internal_notes" />

            <TextView
                android:id="@+id/radio_internal_notes_description"
                style="@style/RadioButtonDescription"
                android:text="@string/tv_internal_notes_description"
                tools:visibility="visible" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rb_firebase"
                style="@style/RadioButton"
                android:text="@string/rb_firebase" />

            <TextView
                android:id="@+id/radio_firebase_notes_description"
                style="@style/RadioButtonDescription"
                android:text="@string/tv_firebase_notes_description"
                tools:visibility="visible" />
        </RadioGroup>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_settings_save"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dim_40dp"
        android:text="@string/settings_save_button"
        android:textColor="@color/note_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/note_title"
        app:strokeWidth="@dimen/note_card_stroke_width" />

</androidx.constraintlayout.widget.ConstraintLayout>